--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.url= jdbc:postgresql://$HOST:5432/$DATABASE
+spring.datasource.url= jdbc:postgresql://$HOST:$PORT/$DATABASE
 spring.datasource.username=$USERNAME
 spring.datasource.password=$PASSWORD
 spring.jpa.hibernate.ddl-auto=update
